@@ -28,29 +28,27 @@ struct cob_decimal {
   int decimals;
 };
 
-typedef struct cob_decimal *cob_decimal;
-
-extern cob_decimal cob_d1, cob_d2, cob_d3, cob_d4, cob_dt;
+extern struct cob_decimal *cob_d1, *cob_d2, *cob_d3, *cob_d4, *cob_dt;
 
 extern void cob_init_numeric (void);
-extern void cob_decimal_init (cob_decimal d);
-extern void cob_decimal_clear (cob_decimal d);
-extern void cob_decimal_print (cob_decimal d);
-extern void cob_decimal_set (cob_decimal dst, cob_decimal src);
-extern void cob_decimal_set_int (cob_decimal d, int n, int decimals);
-extern void cob_decimal_set_int64 (cob_decimal d, long long n, int decimals);
-extern void cob_decimal_set_double (cob_decimal d, double v);
-extern void cob_decimal_set_display (cob_decimal d, struct cob_field f);
-extern void cob_decimal_set_field (cob_decimal d, struct cob_field f);
-extern void cob_decimal_get (cob_decimal d, struct cob_field f);
-extern void cob_decimal_get_rounded (cob_decimal d, struct cob_field f);
-extern double cob_decimal_get_double (cob_decimal d);
-extern void cob_decimal_add (cob_decimal d1, cob_decimal d2);
-extern void cob_decimal_sub (cob_decimal d1, cob_decimal d2);
-extern void cob_decimal_mul (cob_decimal d1, cob_decimal d2);
-extern void cob_decimal_div (cob_decimal d1, cob_decimal d2);
-extern void cob_decimal_pow (cob_decimal d1, cob_decimal d2);
-extern int cob_decimal_cmp (cob_decimal d1, cob_decimal d2);
+extern void cob_decimal_init (struct cob_decimal *d);
+extern void cob_decimal_clear (struct cob_decimal *d);
+extern void cob_decimal_print (struct cob_decimal *d);
+extern void cob_decimal_set (struct cob_decimal *dst, struct cob_decimal *src);
+extern void cob_decimal_set_int (struct cob_decimal *d, int n, int decimals);
+extern void cob_decimal_set_int64 (struct cob_decimal *d, long long n, int decimals);
+extern void cob_decimal_set_double (struct cob_decimal *d, double v);
+extern void cob_decimal_set_display (struct cob_decimal *d, struct cob_field f);
+extern void cob_decimal_set_field (struct cob_decimal *d, struct cob_field f);
+extern void cob_decimal_get (struct cob_decimal *d, struct cob_field f);
+extern void cob_decimal_get_rounded (struct cob_decimal *d, struct cob_field f);
+extern double cob_decimal_get_double (struct cob_decimal *d);
+extern void cob_decimal_add (struct cob_decimal *d1, struct cob_decimal *d2);
+extern void cob_decimal_sub (struct cob_decimal *d1, struct cob_decimal *d2);
+extern void cob_decimal_mul (struct cob_decimal *d1, struct cob_decimal *d2);
+extern void cob_decimal_div (struct cob_decimal *d1, struct cob_decimal *d2);
+extern void cob_decimal_pow (struct cob_decimal *d1, struct cob_decimal *d2);
+extern int cob_decimal_cmp (struct cob_decimal *d1, struct cob_decimal *d2);
 
 extern void cob_add (struct cob_field f1, struct cob_field f2, int round);
 extern void cob_add_int (struct cob_field f, int n, int decimals, int round);
